@@ -2,6 +2,8 @@
  - fix: removed confusing wait-cursor during circle selection
  - fix: manual upload dialog was shown even thoug user pressed
    cancel on circle creation (#20)
+ - fix: silenced very long error message about connection errors
+   in the background thread that refreshes the login status
  - tests: add complementary tests for upload queue and persistent job
    list
 0.5.9
